--- a/sdk-objectmodel-swift.xcodeproj/xcshareddata/xcschemes/sdk-objectmodel-swift.xcscheme
+++ b/sdk-objectmodel-swift.xcodeproj/xcshareddata/xcschemes/sdk-objectmodel-swift.xcscheme
@@ -20,6 +20,34 @@
                ReferencedContainer = "container:sdk-objectmodel-swift.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "B670EB785384F93836C678F8565B8DEB"
+               BuildableName = "Pods_sdk_objectmodel_swift.framework"
+               BlueprintName = "Pods-sdk-objectmodel-swift"
+               ReferencedContainer = "container:Pods/Pods.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "4797992FA7171507915B2C562CF0496A"
+               BuildableName = "Pods_sdk_objectmodel_swiftTests.framework"
+               BlueprintName = "Pods-sdk-objectmodel-swiftTests"
+               ReferencedContainer = "container:Pods/Pods.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
