--- a/sdk-objectmodel-swift.xcodeproj/xcshareddata/xcschemes/sdk-objectmodel-swift.xcscheme
+++ b/sdk-objectmodel-swift.xcodeproj/xcshareddata/xcschemes/sdk-objectmodel-swift.xcscheme
@@ -14,20 +14,6 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "8CFBB62F21F6371D00BD42A3"
-               BuildableName = "sdk_objectmodel_swift.framework"
-               BlueprintName = "sdk-objectmodel-swift"
-               ReferencedContainer = "container:sdk-objectmodel-swift.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
                BlueprintIdentifier = "B670EB785384F93836C678F8565B8DEB"
                BuildableName = "Pods_sdk_objectmodel_swift.framework"
                BlueprintName = "Pods-sdk-objectmodel-swift"
@@ -46,6 +32,34 @@
                BuildableName = "Pods_sdk_objectmodel_swiftTests.framework"
                BlueprintName = "Pods-sdk-objectmodel-swiftTests"
                ReferencedContainer = "container:Pods/Pods.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "8CFBB62F21F6371D00BD42A3"
+               BuildableName = "sdk_objectmodel_swift.framework"
+               BlueprintName = "sdk-objectmodel-swift"
+               ReferencedContainer = "container:sdk-objectmodel-swift.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "8CFBB63821F6371D00BD42A3"
+               BuildableName = "sdk-objectmodel-swiftTests.xctest"
+               BlueprintName = "sdk-objectmodel-swiftTests"
+               ReferencedContainer = "container:sdk-objectmodel-swift.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
