--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,6 @@ xcode_project: sdk-objectmodel-swift.xcodeproj # path to your xcodeproj folder
 xcode_scheme: sdk-objectmodel-swift
 xcode_destination: platform=iOS Simulator,OS=11.3,name=iPhone X
 
+before_install:
+- gem install slather
+
