--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,18 @@ xcode_project: sdk-objectmodel-swift.xcodeproj # path to your xcodeproj folder
 xcode_scheme: sdk-objectmodel-swift
 xcode_destination: platform=iOS Simulator,OS=11.3,name=iPhone X
 
-before_install:
-- gem install slather
+script:
+  - gem install slather &&
+    curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter &&
+    chmod +x ./cc-test-reporter &&
+    ./cc-test-reporter before-build &&
+    codebuild -project sdk-objectmodel-swift.xcodeproj -scheme sdk-objectmodel-swift -destination platform\=iOS\ Simulator,OS\=12.1,name\=iPhone\ X build test | xcpretty &&
+    slather coverage -x --scheme sdk-objectmodel-swift sdk-objectmodel-swift.xcodeproj &&
+    ./cc-test-reporter after-build
+
+    
+
+
+
+   
 
