--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ language: swift
 xcode_project: sdk-objectmodel-swift.xcodeproj # path to your xcodeproj folder
 xcode_scheme: sdk-objectmodel-swift
 xcode_destination: platform=iOS Simulator,OS=11.3,name=iPhone X
+install: true
 
 script:
   - gem install slather &&
