--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 osx_image: xcode10.1
 language: swift
-xcode_project: sdk-objectmodel-swift.xcodeproj # path to your xcodeproj folder
+xcode_project: sdk-objectmodel-swift.xcodeproj 
 xcode_scheme: sdk-objectmodel-swift
 xcode_destination: platform=iOS Simulator,OS=11.3,name=iPhone X
 
